--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.0",
-    "lint-staged": "^13.2.2"
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
