--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "useTabs": false,
   "tabWidth": 2,
   "printWidth": 120,
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "semi": false
 }
