--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,5 @@
   "useTabs": false,
   "tabWidth": 2,
   "printWidth": 120,
-  "arrowParens": "always",
-  "semi": false
+  "arrowParens": "always"
 }
