--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "framer-motion": "^10.12.8",
     "next": "13.4.1",
     "postcss": "8.4.23",
