--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "13.4.1",
     "eslint-plugin-unused-imports": "^2.0.0",
     "framer-motion": "^10.12.8",
+    "gapi-script": "^1.2.0",
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
