--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "cookies-next": "^2.1.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "eslint-plugin-unused-imports": "^2.0.0",
