--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "firebase": "^9.22.1",
     "framer-motion": "^10.12.8",
     "next": "13.4.1",
     "postcss": "8.4.23",
@@ -45,6 +46,7 @@
     "@storybook/testing-library": "^0.0.14-next.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "encoding": "^0.1.13",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-storybook": "^0.6.12",
