--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@chakra-ui/storybook-addon": "^4.0.16",
     "@storybook/addon-essentials": "^7.0.9",
     "@storybook/addon-interactions": "^7.0.9",
     "@storybook/addon-links": "^7.0.9",
