--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "^1.12.0",
     "sass": "^1.62.1",
+    "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
+    "twin.macro": "^3.3.1",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
   },
