--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "bash ./scripts/chromatic_publish.sh"
+    "chromatic": "bash ./scripts/chromatic_publish.sh",
+    "test": "jest",
+    "test:all": "jest --watchAll"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
@@ -34,8 +36,8 @@
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "^1.12.0",
     "sass": "^1.62.1",
+    "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
@@ -51,8 +53,12 @@
     "@storybook/react": "^7.0.9",
     "@storybook/testing-library": "^0.0.14-next.2",
     "@svgr/webpack": "^8.0.1",
+    "@testing-library/dom": "^9.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.3",
+    "babel-jest": "^29.5.0",
     "chromatic": "^6.17.4",
     "encoding": "^0.1.13",
     "eslint-config-prettier": "^8.8.0",
@@ -60,10 +66,12 @@
     "eslint-plugin-storybook": "^0.6.12",
     "husky": "^8.0.0",
     "jest": "^29.5.0",
+    "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
-    "storybook": "^7.0.9"
+    "storybook": "^7.0.9",
+    "ts-jest": "^29.1.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
