--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "firebase": "^9.23.0",
     "framer-motion": "^10.12.8",
     "lodash": "^4.17.21",
+    "lottie-web": "^5.12.2",
     "next": "13.4.1",
     "postcss": "^8.4.24",
     "react": "18.2.0",
