--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "encoding": "^0.1.13",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.6.12",
     "husky": "^8.0.0",
     "jest": "^29.5.0",
