--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "css.lint.unknownAtRules": "ignore",
   "scss.lint.unknownAtRules": "ignore",
-  "cSpell.words": ["lumos", "signout", "startnow"]
+  "cSpell.words": ["googleusercontent", "lumos", "signout", "startnow"]
 }
