feat: 홈페이지 Footer 섹션

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "css.lint.unknownAtRules": "ignore",
   "scss.lint.unknownAtRules": "ignore",
-  "cSpell.words": ["UXUI"]
+  "cSpell.words": ["insightout", "nbps", "UXUI"]
 }
