--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "cookies-next": "^2.1.1",
+    "dayjs": "^1.11.8",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "eslint-plugin-unused-imports": "^2.0.0",
