--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "13.4.1",
     "postcss": "^8.4.24",
     "react": "18.2.0",
+    "react-canvas-confetti": "^1.4.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "sass": "^1.62.1",
