feat: GNB 마이페이지 연결

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "css.lint.unknownAtRules": "ignore",
   "scss.lint.unknownAtRules": "ignore",
-  "cSpell.words": ["googleusercontent", "lumos", "signout", "startnow", "insightout", "nbps", "UXUI"]
+  "cSpell.words": ["googleusercontent", "insightout", "lumos", "mypage", "nbps", "signout", "startnow", "UXUI"]
 }
