--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "sass": "^1.62.1",
+    "sharp": "^0.32.3",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
