--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "20.1.0",
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.4",
+    "ai": "^2.1.28",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
@@ -37,6 +38,7 @@
     "lodash": "^4.17.21",
     "lottie-web": "^5.12.2",
     "next": "13.4.1",
+    "openai-edge": "^1.2.2",
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-canvas-confetti": "^1.4.0",
