--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
+    "yup": "^1.2.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
