--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@hookform/resolvers": "^3.1.1",
+    "@hookform/resolvers": "2.9.10",
     "@tanstack/react-query": "^4.29.5",
     "@tanstack/react-query-devtools": "^4.29.6",
     "@types/node": "20.1.0",
